@@ -104,20 +104,6 @@ name|CharArrayMap
 import|;
 end_import
 
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|Version
-import|;
-end_import
-
 begin_comment
 comment|/**  * Provides the ability to override any {@link KeywordAttribute} aware stemmer  * with custom dictionary-based stemming.  */
 end_comment
@@ -171,9 +157,6 @@ DECL|method|StemmerOverrideFilter
 specifier|public
 name|StemmerOverrideFilter
 parameter_list|(
-name|Version
-name|matchVersion
-parameter_list|,
 name|TokenStream
 name|input
 parameter_list|,
@@ -193,14 +176,7 @@ name|this
 operator|.
 name|dictionary
 operator|=
-name|CharArrayMap
-operator|.
-name|copy
-argument_list|(
-name|matchVersion
-argument_list|,
 name|dictionary
-argument_list|)
 expr_stmt|;
 block|}
 annotation|@
